@@ -2,6 +2,7 @@ FROM openjdk:8-jre
 RUN useradd -ms /bin/bash wiremock
 USER root
 EXPOSE 8080
+ENV JAVA_OPTS="-XX:MaxPermSize=1024m"
 
 RUN mkdir -p /opt/wiremock
 WORKDIR /opt/wiremock/
@@ -12,7 +13,5 @@ COPY ./data/__files /opt/wiremock/__files
 COPY ./data/mappings /opt/wiremock/mappings
 
 RUN  curl -L "https://repo1.maven.org/maven2/com/github/tomakehurst/wiremock-standalone/2.27.2/wiremock-standalone-2.27.2.jar" -o /opt/wiremock/wiremock.jar
-
-
 
 ENTRYPOINT ["java", "-jar", "/opt/wiremock/wiremock.jar"]
